--- a/templates/actions/settings/Settings.html
+++ b/templates/actions/settings/Settings.html
@@ -48,7 +48,7 @@
 
         <div class="field">
             <div class="name">
-                Объединять по:
+                Объединять по
             </div>
             <div class="value">
                 <ul class="marger_list">
@@ -66,10 +66,10 @@
 
         <div class="field">
             <div class="name">
-                Главный контакт:
+                Главный контакт
             </div>
-            <p>Выберите главный контакт, который останется после объединения. Остальные контакты в результате выполнения процедуры объединения будут удалены. Контактная информация из удаляемых контактов, за исключением уникальных полей, будет добавлена в главный контакт. Ссылки на удаляемые контакты, которые есть в других приложениях, будут изменены на главный контакт. </p>
             <div class="value">
+                <p>Выберите главный контакт, который останется после объединения. Остальные контакты в результате выполнения процедуры объединения будут удалены. Контактная информация из удаляемых контактов, за исключением уникальных полей, будет добавлена в главный контакт. Ссылки на удаляемые контакты, которые есть в других приложениях, будут изменены на главный контакт. </p>
                 <ul>
                     <li><input type="radio" {if $settings.master == 'new'}checked="checked"{/if} name="shop_mergercontact[master]" value="new"> - Вновь созданный</li>
                     <li><input type="radio" {if $settings.master == 'old'}checked="checked"{/if} name="shop_mergercontact[master]" value="old"> - Самый старый из уже существующих</li>
